--- a/src/Components/RestaurantsPage/Header2.css
+++ b/src/Components/RestaurantsPage/Header2.css
@@ -1,20 +1,20 @@
-.Header__Container{
-    display: flex;
-    width: 100%;
-    margin: auto;
-    position: fixed;
-    z-index: 20;
-    padding: 10px 0;
-    background-color: rgb(248, 248, 248);
+.Header__Container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: fixed;
+  z-index: 20;
+  padding: 15px 0;
+  background-color: rgb(248, 248, 248);
+  box-shadow: 0px 8px 24px rgba(149, 157, 165, 0.2);
 }
 
-
 .Header__Text {
-    font-size: 1.8rem;
-    font-weight: 300;
-    cursor: pointer;
-  }
-  
-  .Header__LogoImage {
-    filter: invert(1);
-  }
+  font-size: 1.8rem;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.Header__LogoImage {
+  filter: invert(1);
+}
