--- a/src/Components/MenuCards.css
+++ b/src/Components/MenuCards.css
@@ -17,14 +17,26 @@
 }
 
 .Card:hover {
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .Card img {
-  width: 35rem;
-  height: 19rem;
-  object-fit: cover;
-  border-radius: 1.2rem;
+    width: 35rem;
+    height: 19rem;
+    object-fit: cover;
+    border-radius: 1.2rem;
+    animation: scale-up 300ms ease-out forwards;
+}
+
+@keyframes scale-up {
+    from {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .Menu_TextContainer {
